Add command list to front end
